// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Form Form item hidden noStyle should not work when hidden 1`] = `
<form
  class="g-form g-form-horizontal css-var-root g-form-css-var"
>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-hidden g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <input
              class="g-input g-input-outlined css-var-root g-input-css-var"
              id="light"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Form item hidden should work 1`] = `
<form
  class="g-form g-form-horizontal css-var-root g-form-css-var"
>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-hidden g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <input
              class="g-input g-input-outlined css-var-root g-input-css-var"
              id="light"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Form.Item should support data-*、aria-* and custom attribute 1`] = `
<form
  class="g-form g-form-horizontal css-var-root g-form-css-var"
>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      aria-hidden="true"
      cccc="bbbb"
      class="g-row g-form-item-row css-var-root"
      data-text="123"
    >
      <div
        class="g-col g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            text
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form form should support disabled 1`] = `
<form
  class="g-form g-form-horizontal css-var-root g-form-css-var"
>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          for="disabled"
          title="Form disabled"
        >
          Form disabled
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <label
              class="g-checkbox-wrapper g-checkbox-wrapper-disabled g-checkbox-wrapper-in-form-item css-var-root g-checkbox-css-var"
            >
              <span
                class="g-checkbox g-wave-target g-checkbox-disabled"
              >
                <input
                  class="g-checkbox-input"
                  disabled=""
                  id="disabled"
                  type="checkbox"
                />
              </span>
              <span
                class="g-checkbox-label"
              >
                disabled
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Radio"
        >
          Radio
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-radio-group g-radio-group-outline css-var-root g-radio-css-var"
              role="radiogroup"
            >
              <label
                class="g-radio-wrapper g-radio-wrapper-disabled g-radio-wrapper-in-form-item css-var-root g-radio-css-var"
              >
                <span
                  class="g-radio g-wave-target g-radio-disabled"
                >
                  <input
                    class="g-radio-input"
                    disabled=""
                    name="test-id"
                    type="radio"
                    value="apple"
                  />
                </span>
                <span
                  class="g-radio-label"
                >
                  Apple
                </span>
              </label>
              <label
                class="g-radio-wrapper g-radio-wrapper-disabled g-radio-wrapper-in-form-item css-var-root g-radio-css-var"
              >
                <span
                  class="g-radio g-wave-target g-radio-disabled"
                >
                  <input
                    class="g-radio-input"
                    disabled=""
                    name="test-id"
                    type="radio"
                    value="pear"
                  />
                </span>
                <span
                  class="g-radio-label"
                >
                  Pear
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Input"
        >
          Input
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <input
              class="g-input g-input-disabled g-input-outlined css-var-root g-input-css-var"
              disabled=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Select"
        >
          Select
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-select g-select-outlined g-select-in-form-item css-var-root g-select-css-var g-select-single g-select-show-arrow g-select-disabled"
            >
              <div
                class="g-select-content"
              >
                <div
                  class="g-select-placeholder"
                  style="visibility: visible;"
                />
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="off"
                  class="g-select-input"
                  disabled=""
                  id="test-id"
                  readonly=""
                  role="combobox"
                  type="search"
                  value=""
                />
              </div>
              <div
                class="g-select-suffix"
              >
                <span
                  aria-label="down"
                  class="gicon gicon-down"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="TreeSelect"
        >
          TreeSelect
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-select g-tree-select g-select-outlined g-select-in-form-item css-var-root g-select-css-var g-tree-select-css-var g-select-single g-select-show-arrow g-select-disabled"
            >
              <div
                class="g-select-content"
              >
                <div
                  class="g-select-placeholder"
                  style="visibility: visible;"
                />
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="off"
                  class="g-select-input"
                  disabled=""
                  id="test-id"
                  readonly=""
                  role="combobox"
                  type="search"
                  value=""
                />
              </div>
              <div
                class="g-select-suffix"
              >
                <span
                  aria-label="down"
                  class="gicon gicon-down"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Cascader"
        >
          Cascader
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-select g-cascader g-select-outlined g-select-in-form-item g-select-css-var g-cascader-css-var css-var-root g-select-single g-select-show-arrow g-select-disabled"
            >
              <div
                class="g-select-content"
              >
                <div
                  class="g-select-placeholder"
                  style="visibility: visible;"
                />
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="off"
                  class="g-select-input"
                  disabled=""
                  id="test-id"
                  readonly=""
                  role="combobox"
                  type="search"
                  value=""
                />
              </div>
              <div
                class="g-select-suffix"
              >
                <span
                  aria-label="down"
                  class="gicon gicon-down"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="DatePicker"
        >
          DatePicker
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-picker g-picker-disabled g-picker-outlined css-var-root g-picker-css-var"
            >
              <div
                class="g-picker-input"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  disabled=""
                  placeholder="Select date"
                  size="12"
                  value=""
                />
                <span
                  class="g-picker-suffix"
                >
                  <span
                    aria-label="calendar"
                    class="gicon gicon-calendar"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="calendar"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="RangePicker"
        >
          RangePicker
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-picker g-picker-range g-picker-disabled g-picker-outlined css-var-root g-picker-css-var"
            >
              <div
                class="g-picker-input g-picker-input-start"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  date-range="start"
                  disabled=""
                  placeholder="Start date"
                  size="12"
                  value=""
                />
              </div>
              <div
                class="g-picker-range-separator"
              >
                <span
                  aria-label="to"
                  class="g-picker-separator"
                >
                  <span
                    aria-label="swap-right"
                    class="gicon gicon-swap-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="swap-right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="g-picker-input g-picker-input-end"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  date-range="end"
                  disabled=""
                  placeholder="End date"
                  size="12"
                  value=""
                />
              </div>
              <div
                class="g-picker-active-bar"
                style="position: absolute; width: 0px;"
              />
              <span
                class="g-picker-suffix"
              >
                <span
                  aria-label="calendar"
                  class="gicon gicon-calendar"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="calendar"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="InputNumber"
        >
          InputNumber
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-input-number g-input-number-mode-input css-var-root g-input-number-css-var g-input-number-outlined g-input-number-in-form-item g-input-number-without-controls g-input-number-disabled"
            >
              <input
                autocomplete="off"
                class="g-input-number-input"
                disabled=""
                role="spinbutton"
                step="1"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="TextArea"
        >
          TextArea
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <textarea
              class="g-input g-input-outlined css-var-root g-input-css-var g-input-disabled"
              disabled=""
              rows="4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Switch"
        >
          Switch
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <button
              aria-checked="false"
              class="g-switch css-var-root g-switch-disabled"
              disabled=""
              role="switch"
              type="button"
            >
              <div
                class="g-switch-handle"
              />
              <span
                class="g-switch-inner"
              >
                <span
                  class="g-switch-inner-checked"
                />
                <span
                  class="g-switch-inner-unchecked"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Upload"
        >
          Upload
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <span
              class="g-upload-wrapper css-var-root"
            >
              <div
                class="g-upload g-upload-select g-upload-disabled g-upload-hidden"
              >
                <span
                  class="g-upload g-upload-disabled"
                >
                  <input
                    accept=""
                    disabled=""
                    name="file"
                    style="display: none;"
                    type="file"
                  />
                </span>
              </div>
              <div
                class="g-upload-list g-upload-list-text"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Button"
        >
          Button
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <button
              class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined"
              disabled=""
              type="button"
            >
              <span>
                Button
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="Slider"
        >
          Slider
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-slider css-var-root g-slider-disabled g-slider-horizontal"
            >
              <div
                class="g-slider-rail"
              />
              <div
                class="g-slider-track"
                style="left: 0%; width: 0%;"
              />
              <div
                class="g-slider-step"
              />
              <div
                aria-disabled="true"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="g-slider-handle"
                role="slider"
                style="left: 0%; transform: translateX(-50%);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          title="ColorPicker"
        >
          ColorPicker
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-color-picker-trigger css-var-root g-color-picker-css-var g-color-picker-trigger-disabled"
            >
              <div
                class="g-color-picker-clear"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form form.item should support layout 1`] = `
<form
  class="g-form g-form-horizontal css-var-root g-form-css-var"
>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-form-item-label css-var-root"
      >
        <label
          class=""
          for="name"
          title="name"
        >
          name
        </label>
      </div>
      <div
        class="g-col g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <input
              class="g-input g-input-outlined css-var-root g-input-css-var"
              id="name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-col-4 g-form-item-label css-var-root"
      >
        <label
          class=""
          for="horizontal"
          title="horizontal"
        >
          horizontal
        </label>
      </div>
      <div
        class="g-col g-col-14 g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <input
              class="g-input g-input-outlined css-var-root g-input-css-var"
              id="horizontal"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-vertical"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-form-item-label css-var-root"
      >
        <label
          class=""
          for="vertical"
          title="vertical"
        >
          vertical
        </label>
      </div>
      <div
        class="g-col g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <input
              class="g-input g-input-outlined css-var-root g-input-css-var"
              id="vertical"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-root g-form-css-var g-form-item-vertical"
  >
    <div
      class="g-row g-form-item-row css-var-root"
    >
      <div
        class="g-col g-form-item-label css-var-root"
      >
        <label
          class=""
          for="vertical2"
          title="vertical2"
        >
          vertical2
        </label>
      </div>
      <div
        class="g-col g-form-item-control css-var-root"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <input
              class="g-input g-input-outlined css-var-root g-input-css-var"
              id="vertical2"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 1`] = `
<form
  class="g-form g-form-horizontal g-form-rtl css-var-root g-form-css-var"
/>
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="g-form-item css-var-root g-form-css-var g-form-item-horizontal"
>
  <div
    class="g-row g-row-rtl g-form-item-row css-var-root"
  >
    <div
      class="g-col g-form-item-control g-col-rtl css-var-root"
    >
      <div
        class="g-form-item-control-input"
      >
        <div
          class="g-form-item-control-input-content"
        />
      </div>
    </div>
  </div>
</div>
`;
